cmake_minimum_required(VERSION 3.30)
project(TP_1_ProgSys)

set(CMAKE_CXX_STANDARD 20)

add_executable(TP_1_ProgSys
        main.c
        Q1.c
        Q2.c
        main.h
        Q3.c
        Q2.h
        Q1.h
        Q3.h
        Q4.c
        Q4.h
        Q5.c
        Q5.h
        Q6.c
        Q6.h
)
